Updated website pages

--- a/book.html
+++ b/book.html
@@ -18,10 +18,10 @@
         <h2>Select Your Vehicle</h2>
         <section class="vehicles">
             <div class="vehicle">
-                <img src="sedan.jpg" alt="Sedan">
+                <img src="https://imgd-ct.aeplcdn.com/370x231/n/cw/ec/144681/virtus-exterior-right-front-three-quarter-7.jpeg?isig=0&q=80" alt="Sedan">
                 <h3>Sedan</h3>
                 <p>Comfortable and stylish sedan perfect for city driving.</p>
-                <p>Price: $50/day</p>
+                <p>Price: 1000/day</p>
                 <a href="#rent-sedan" class="rent-btn">Rent Now</a>
                 <div id="rent-sedan" class="rent-form">
                     <form action="rent-confirmation.html" method="post">
@@ -51,10 +51,10 @@
             </div>
             <!-- Repeat the block below for additional vehicles -->
             <div class="vehicle">
-                <img src="suv.jpg" alt="SUV">
+                <img src="https://imgd.aeplcdn.com/600x337/n/cw/ec/42355/xuv700-exterior-right-front-three-quarter-3.jpeg?isig=0&q=80" alt="SUV">
                 <h3>SUV</h3>
                 <p>Spacious SUV ideal for family trips and off-road adventures.</p>
-                <p>Price: $80/day</p>
+                <p>Price: 1800/day</p>
                 <a href="#rent-suv" class="rent-btn">Rent Now</a>
                 <div id="rent-suv" class="rent-form">
                     <form action="rent-confirmation.html" method="post">
